<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/line_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/main_menu_margin"
        android:layout_marginTop="@dimen/main_menu_margin"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/book_menu_train"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/book_menu_train_selector"
                android:contentDescription="@string/img_desc" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/main_menu_title_pic_split"
                android:gravity="center"
                android:text="@string/book_menu_yypx"
                android:textSize="@dimen/main_menu_title_textsize" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/book_menu_imitate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/book_menu_imitate_selector"
                android:contentDescription="@string/img_desc" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/main_menu_title_pic_split"
                android:gravity="center"
                android:text="@string/book_menu_yymk"
                android:textSize="@dimen/main_menu_title_textsize" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>