<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
             <!-- 立刻报名 -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" 
                    android:background="@color/white"
                    >
          
                    <ImageView
                        android:id="@+id/wegroup_detail_img_header"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:background="@drawable/wegroup_bg"
                        android:orientation="vertical" />

                    <TextView
                        android:id="@+id/wegroup_item_tv_imgdes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/wegroup_detail_defualtmargin"
                        android:text="@string/wegroup_detail_header_des"
                        android:textColor="@color/book_imitate_textcolornew"
                        android:textSize="@dimen/wegroup_item_pricebtn_tsize" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/wegroup_item_line_size"
                        android:background="@color/wegroup_item_line_color" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" 
                        android:padding="@dimen/wegroup_detail_defualtmargin"
                        >

                        <TextView
                            android:id="@+id/wegroup_detail_price"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:padding="@dimen/wegroup_detail_defualtmargin"
                            android:text="@string/wegroup_detail_price_pre"
                            android:textSize="@dimen/wegroup_detail_price_pre_size" />

                        <Button
                            android:id="@+id/wegroup_detail_submmit"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:padding="@dimen/wegroup_detail_defualtmargin"
                            android:background="@drawable/login_bt_edge"
                            android:text="@string/wegroup_detail_submmit"
                            android:textColor="@color/white"
                            android:textSize="@dimen/button_textSize"
                            android:onClick="weGroupSubmmit"
                             />
                    </LinearLayout>
                            <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/wegroup_item_line_size"
                        android:background="@color/wegroup_item_line_color" />
                </LinearLayout>

</LinearLayout>
